[package]
name = "wavefront_rs"
version = "0.0.0"
authors = ["Heiko Alexander Weber <heiko.a.weber@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Standardizing messages the right way."
readme = "docs/README.md"
homepage = "https://heikoalexanderweber.github.io/wavefront_rs/"
repository = "https://github.com/HeikoAlexanderWeber/wavefront_rs"
keywords = ["wavefront", "obj", "mtl"]
categories = ["parser-implementations", "encoding", "graphics"]


[profile]
  [dev]
    opt-level = 0
  [release]
    opt-level = 3

[dependencies]
futures = "0.3.1"
