[package]
name = "wavefront_rs"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2018"
license = "MIT"
description = "Typed Wavefront OBJ parser / writer."
readme = "docs/README.md"
homepage = "https://replicadse.github.io/wavefront_rs/"
repository = "https://github.com/replicadse/wavefront_rs"
keywords = ["wavefront", "obj", "mtl"]
categories = ["parser-implementations", "encoding", "graphics"]

[profile]
  [dev]
    opt-level = 0
  [release]
    opt-level = 3

[dev-dependencies]
